<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        tools:context=".ParentSignUp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="165dp"
            android:layout_height="160dp"
            android:contentDescription="@string/parent_login"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176"
            app:srcCompat="@drawable/parent"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/parent_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/login_input_style"
            android:ems="10"
            android:hint="@string/parent_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="#FF03DAC5"
            android:textColorHint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.163" />

        <EditText
            android:id="@+id/signup_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="288dp"
            android:autofillHints=""
            android:background="@drawable/login_input_style"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="#FF03DAC5"
            android:textColorHint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_email"
            app:layout_constraintVertical_bias="0.588" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/SignUp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_Password"
            app:layout_constraintVertical_bias="0.248" />

        <EditText
            android:id="@+id/parent_fullname"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/login_input_style"
            android:ems="10"
            android:hint="@string/full_name_"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:textColor="#FF03DAC5"
            android:textColorHint="@color/orange"
            app:layout_constraintBottom_toTopOf="@+id/parent_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

 </layout>
